--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Test Steam</title>
+    <style>
+        .games {
+            margin: 10px;
+            border: 2px solid red;
+        }
+        .games:hover {
+            background: red;
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="searchResults"> </div>
+    <div id="gameDiv"></div>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
     <script src="object.js"></script>
+    <script src="apiQuery.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
